<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/colorText"
            android:textSize="34sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:text="@string/register_description"/>

        <EditText
            android:layout_marginTop="40dp"
            android:id="@+id/register_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginEditText"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/register_edit_text_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginEditText"
            android:textColor="@color/colorText"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/register_edit_text_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginEditText"
            android:textColor="@color/colorText"
            android:layout_marginTop="10dp"
            android:hint="@string/email"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorText"
            android:background="@drawable/login_button_background"
            android:text="@string/register"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark">

        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="@string/already_a_user"/>
    </LinearLayout>
</RelativeLayout>
